--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,9 @@ CMakeLists.txt.user
 assimp.pc
 assimp.aps
 revision.h
-contrib/zlib/zconf.h
+#contrib/zlib/zconf.h
 contrib/zlib/zlib.pc
-include/assimp/config.h
+#include/assimp/config.h
 unit.vcxproj.user
 
 # CMake
@@ -120,3 +120,6 @@ tools/assimp_qt_viewer/ui_mainwindow.h
 
 #Generated directory
 generated/*
+
+bin/
+bin-int/
